--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,46 +1,34 @@
-#TOSCA scripts run
 parameters:
 - name: toscaTests
   displayName: Tosca Tests
-  type: object
-  default: 3a12f411-64ba-5773-e489-87334879e9f8
- 
-trigger: none
- 
-pool: NonProdWindows
- 
-variables:
-  azureSubscription: 'qdigitalcode-devops-spn-BoQDenDevSub-DenovoBank-Subscription'
-  Pega.Uri: 'https://memeqb-dlho-devops.pegacloud.net/prweb/api/ManageDeploymentPipeline/v1'
-  Pipeline.Id: 'Pipeline-JARQ4'
- 
-steps:
-- pwsh: |
-    $xmlWriter = New-Object System.XMl.XmlTextWriter("PEGA.xml", $Null)
-    $xmlWriter.Formatting = "Indented"
-    $xmlWriter.Indentation = 1
-    $XmlWriter.IndentChar = "`t"
-    $xmlWriter.WriteStartDocument()
-    $xmlWriter.WriteStartElement('testConfiguration')
-    $xmlWriter.WriteStartElement('TestEvents')
-    $tests = "${{ parameters.toscaTests }}" -split " "
-    foreach ($test in $tests)
-    {
-      $xmlWriter.WriteElementString("TestEvent", $test)
-    }
-    $xmlWriter.WriteEndElement()
-    $xmlWriter.WriteEndElement()
-    $xmlWriter.WriteEndDocument()
-    $xmlWriter.Flush()
-    $xmlWriter.Close()
-  displayName: Setup ToscaCI Test XML
- 
-- pwsh: |
-    $(System.DefaultWorkingDirectory)\toscaCIClient\ToscaCIClient\ToscaCIClient.exe -m distributed -c $(System.DefaultWorkingDirectory)\PEGA.xml  -t junit -r $(Common.TestResultsDirectory)\ToscaCI.xml -x True
-  displayName: Run ToscaCI Tests
-  continueOnError: true
- 
-- task: PublishTestResults@2
+  #type: object
+  #default: 3a12f411-64ba-5773-e489-87334879e9f8
+trigger:
+- main
+- release
+
+pool:
+  vmImage: 'NonProdWindows' # Use existing windows agent machine
+
+stages:
+- stage: TOSCAExecution
+  displayName: 'Execute TOSCA Script'
+  jobs:
+  - job: Execute_Tosca_Test
+    displayName: 'Execute Tosca Test Suite'
+    steps:
+    - checkout: self
+    - script: |
+    #     # Clone the repository containing configXML
+    git clone <https://github.com/AzurePipelineIntegration/Demo3>
+    #     # Run Tosca test suite
+    "C:\Path\To\TOSCA\executable" "C:\Path\To\TOSCA\script.tosca" -config "\Path\To\config.xml"
+    #     # Replace <path_to_tosca_executable> and <path_to_configXML> with actual paths
+      
+      displayName: 'Execute TOSCA Script'
+
+    # You may need additional steps here for cleanup, reporting, etc.
+    - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
     testResultsFiles: '$(Common.TestResultsDirectory)\ToscaCI.xml'
